# ChangeLog for dev-perl/Email-Valid
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Valid/ChangeLog,v 1.73 2015/04/05 23:04:08 dilfridge Exp $

*Email-Valid-1.196.0 (05 Apr 2015)

  05 Apr 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  +Email-Valid-1.196.0.ebuild:
  Version bump

*Email-Valid-1.192.0-r1 (21 Aug 2014)

  21 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +Email-Valid-1.192.0-r1.ebuild, -Email-Valid-1.192.0.ebuild:
  bumped EAPI to 5; committed directly to stable as no other changes present and
  revbump helps stable systems to keep from dieing on perl-5.18 upgrade

  05 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> Email-Valid-1.192.0.ebuild:
  Fix DESCRIPTION

  16 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> -Email-Valid-0.190.0.ebuild,
  Email-Valid-1.192.0.ebuild:
  ppc stable wrt bug #492144; Drop old.

  16 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> Email-Valid-1.192.0.ebuild:
  ppc64 stable wrt bug #492144

  16 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> Email-Valid-1.192.0.ebuild:
  x86 stable wrt bug #492144

  16 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> Email-Valid-1.192.0.ebuild:
  amd64 stable wrt bug #492144

  11 Feb 2014; Jeroen Roovers <jer@gentoo.org> Email-Valid-1.192.0.ebuild:
  Stable for HPPA (bug #492144).

*Email-Valid-1.192.0 (18 Sep 2013)

  18 Sep 2013; Patrick Lauer <patrick@gentoo.org> +Email-Valid-1.192.0.ebuild:
  Bump

  05 Dec 2012; Fabian Groffen <grobian@gentoo.org> Email-Valid-0.190.0.ebuild:
  Marked ~x86-linux, bug #444950

  02 Sep 2012; Torsten Veller <tove@gentoo.org>
  -files/0.181-disable-online-test.patch, -Email-Valid-0.184.ebuild,
  -Email-Valid-0.187.0.ebuild, -Email-Valid-0.188.0.ebuild:
  Cleanup

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  17 Jun 2012; Raúl Porcel <armin76@gentoo.org> Email-Valid-0.184.ebuild,