@@ -5,25 +5,13 @@ AUX 0.185-disable-online-test.patch 244 SHA256 9399a5dbcffb85299807b9d3da37ab5d8
 DIST Email-Valid-1.192.tar.gz 29372 SHA256 774dd7eb3a0692e58b6d59d0e59d3515fc1a344cd009765ade8bc855f27af86e SHA512 6edc84b863eddb878742a9b72631e3aa2f1fddd0827877ec74b977aedbc9d43d7d9f084039a406b4aecf4db83860a066bed28cf7d5d6347554d71323f648ac22 WHIRLPOOL b59ba9d3e529480710ff7ee714767ce6854942837b90c9fedb452b1ab576757842117b35c14ff897f0eb9ee313ebcddd369fcbc48a8f9cf26eac2e2bd8ed3618
 DIST Email-Valid-1.196.tar.gz 32208 SHA256 75121ce25c1a530076b65a5942326d03bfcc5d15d480e8641b6a84a83bf54268 SHA512 afecd8932ab4479d2057620fac24ab7e211ef4ce67300bf7815156398d1dbb93113dee795ac79114bdb6e7e62f01297fd3e3f64bad11441403bde969ec20e517 WHIRLPOOL 2fb52bfb343d6c7a17223e178a9038c08ddb0b8795c68b1b5f3a49b42307d0325fab7a10237c74cac33180ea1b1e0f0a1dc5aaff8e8a680567d024cd01ce7333
 EBUILD Email-Valid-1.192.0-r1.ebuild 585 SHA256 3824652ce49f260c6eddca63ea51488bf8e05ced75d48d0083df4e7c1e2247bc SHA512 75ac0907ac0e380f49f04df80bf386be6dae5f4973c65e1fd20e15400f34dac4c4f4bd5e6268cd941eb9c3149585733bc89681a3580ab95f070ab30f6dac6d54 WHIRLPOOL d4b8f82e8831873275eb8884efd7b99a8e678f1bd433bf2adc9e2d6fe68be3e6c18388a1f8f3b767600d108d65b4206b0eea7b7489e590f0b908da21379c2d74
-EBUILD Email-Valid-1.196.0.ebuild 767 SHA256 651dae3a4dc08d546740e6db7dffc6ffae322912684b674ea725bc71f8b52c5b SHA512 03c6eac9e7cd3b085c494fda69b5ae8d8b68cb01467c834b2956b2563c8183721b777ba21304663b2c4dfdf94bdcc5e8c5d72bf1240a43d05d15075f7c55ccb1 WHIRLPOOL 3dfca519d10ff15620739b6ea75d07fa3e4f63bfc674009116e00ad84bb9f9480892f798bef4fc09e7eba4ca78fba578ffefebb792ebb1fa3f0fde9f5e728a66
-MISC ChangeLog 9276 SHA256 423504f516afc443e340511abce1ca684ffe07cd8251d928b414be8e5c54f49a SHA512 e346f202b670992fc2a472d7a66c0a27b48e670ffe0495c4dc16fbaae6f61ea9aefa110fa6acdc016ebc1eeaedaa5b58ce31a1e7a7a3a870627e1037953cf513 WHIRLPOOL bca24093c47ddde29545a110f0780a2a480b3d3a64796d0e5f812a6a4408d6b93e0aff92dc145e3c338c243b1cf06c3f072f45d874369963629475166d57f67a
+EBUILD Email-Valid-1.196.0.ebuild 767 SHA256 7c8878049992b621bf6df42a53b5bf1e7b5a8be17c0521af46830421dec066cc SHA512 4eb11508b56a03ccb2e6496ca106fa9e05f894cffc1e9911b3e06ac49ecfabb198f67e650cf1d71a480ca0c21eb3e03808a3acd82d3894ccc8710c0b99694a78 WHIRLPOOL 9285a06fedacca8fd08ed3fa74c9a130557225e7e738a8fb87e1fa70f2b7cfb8f8a97e04460a5b379f01f2c7f22526d09985e23707ca6e81a835991e55634a6c
+MISC ChangeLog 9376 SHA256 93033f397b3845bab73e868191c49da8da1ddc3fcf2314cad46a9ed9dd713889 SHA512 d0b90e60aa12d88f54a82a979aa8784264e2eb73c1e106703cd2070071626723fc7e6cec887704accf223f56b9faf04c744d4aa676b447f7874f3e64f53e1cb1 WHIRLPOOL dd580430adfa91427e9674de6a69e99896ba2d4fd8a4dc542254952549b3cd356caced7b33bed9ccba272f63f11c35216faf5522f35c281a0f20da680c651a5f
 MISC metadata.xml 296 SHA256 572c6df9cd4095ee6eb71a1fc7ca44040dc45a3aa4c9bc2c99b5b2b5204be66a SHA512 95d6f446c12bcdeff7325901a7c78d2d0859875d5d8c62d545a0dc237de07b99e3bc20758378ddd68e7302e154decbc3d47f918b25df5a9f141e9400eae6ee3b WHIRLPOOL 013a597b2bdf6ae1c73dcebfa493b43a23d911f095cc45d4cb12dc5a2e69ed9f5ef9fdca3dc0340f1c37749ab5b61004dbb1a83125fdb45870f2ae322933020b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVIb9pXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0RkJDMzI0NjNBOTIwMDY5MTQ2NkMzNDBF
-MTM4NkZEN0VGNEI1Nzc5AAoJEOE4b9fvS1d5CnUP/RxsW8PHJSyOCzC6eq1RGNTO
-tJxpGLU4853v9i5uxElyXjkgPn4MUvxx4X04hMsZgV9lw6MG9tO2iTkJ7xZRIML4
-9hv2oVop8TUO3fBNR3g++io97nYBnxW2PQFSi+Ee268bAWZ2HRc42DmMsVd54BJI
-/58V814LThFhHrRbGmSiTcIEdatoL1QimNwBEP5Ch6bvp3AgJOqx6ao4oJ6clFY4
-2LGE8d99xfwh6vRhZeNRJl+5dtubNfgro+DkLguF0EUfQMQ0xMZvYty3nnBtduFl
-UNvM2AE1jmq8OW7iAiUTSwa6InmIk7AXH3tGhBkJaqD8WePiu36bqyaBFbyB31wT
-uFa+K8SNUjfP4qksVPoPcJnaRlFJc5ngdD/eajG3ExIDinP17C1k4o6bt348eZlQ
-o2Nem8wwrjzJDQ8INeIwG2zP4B/VGneRHZYv9QGvCGdVPg1Tqdbr43SlN/FPm//b
-ixBT79cABREwzumAqQYc7THtH3y3P04N1uTXmtyPCGDL0KC6Kr+I37Vatex9C8ca
-/v4xrlEHnEPQGZ/rBx2aq/ILK9xPcq9NAUteJx6kwOKfAo50bcNlwlR+suT6MzI3
-KYNgRI1pH8Jautme+Zlr22dpKMrM3Qm2A+QXCNDq8psMAIH4EReqXY5hfFmsbIAW
-zhPZVj6uUfuBvsmxzEuj
-=DMea
+iEYEAREIAAYFAlUiMboACgkQVWmRsqeSphPdqQCfWuu7iUWCKqQNyqzry2Hz9G/H
+jwoAniY2JWPO4Ots/uuQ+PShDm/bMCS3
+=AcK+
 -----END PGP SIGNATURE-----
