@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-CaptureOutput/IO-CaptureOutput-1.110.400.ebuild,v 1.1 2015/04/05 23:00:27 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-CaptureOutput/IO-CaptureOutput-1.110.400.ebuild,v 1.2 2015/04/06 07:11:22 jer Exp $
 
 EAPI=5
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="Capture STDOUT and STDERR from Perl code, subprocesses or XS"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~hppa ~x86"
 IUSE="test"
 
 RDEPEND="
