@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/IO-CaptureOutput
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-CaptureOutput/ChangeLog,v 1.1 2015/04/05 23:00:27 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-CaptureOutput/ChangeLog,v 1.2 2015/04/06 07:11:22 jer Exp $
+
+  06 Apr 2015; Jeroen Roovers <jer@gentoo.org>
+  IO-CaptureOutput-1.110.400.ebuild:
+  Marked ~hppa (bug #545660).
 
 *IO-CaptureOutput-1.110.400 (05 Apr 2015)
 
