@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Email-Valid
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Valid/ChangeLog,v 1.73 2015/04/05 23:04:08 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Valid/ChangeLog,v 1.74 2015/04/06 07:11:53 jer Exp $
+
+  06 Apr 2015; Jeroen Roovers <jer@gentoo.org> Email-Valid-1.196.0.ebuild:
+  Marked ~hppa (bug #545660).
 
 *Email-Valid-1.196.0 (05 Apr 2015)
 
